<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Single Strings -->
    <string name="app_name">Scripture Now</string>
    <string name="title_activity_changelog">Changelog</string>
    <string name="title_activity_edit_verse">Edit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reference">Reference</string>
    <string name="enter_reference">Enter Reference</string>
    <string name="verse">Verse</string>
    <string name="enter_verse">Enter Verse</string>
    <string name="add_verse">Add Verse</string>
    <string name="toggle_notification">Toggle Notification</string>
    <string name="add_new_verse">Add New Verse</string>
    <string name="input_verse">Input Verse</string>
    <string name="verse_of_the_day">Verse Of The Day</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="notification_verse">Notification Verse</string>
    <string name="remove">Remove</string>
    <string name="loading">Loading verse…</string>

    <!-- String Arrays -->
    <string-array name="pref_default_screen">
        <item>Last Open</item>
        <item>Dashboard</item>
        <item>Topical Bible</item>
        <item>Memorization State...</item>
        <item>Tag...</item>
    </string-array>
    <string-array name="state_names">
        <item>All Verses</item>
        <item>Current</item>
        <item>Memorized</item>
        <item>Current - All</item>
        <item>Current - Most</item>
        <item>Current - Some</item>
        <item>Current - None</item>
    </string-array>
    <string-array name="state_ids">
        <item>-1</item>
        <item>-2</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_default_screen_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="pref_themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_themes_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="sort_methods">
        <item>Date added</item>
        <item>Classical Reference</item>
        <item>Alphabetical</item>
    </string-array>

    <!-- Credits and Open Source Licenses -->
    <string name="developer">Developed by Casey Brooks</string>
    <string name="credits_niv">Scriptures from VerseOfTheDay.com taken from the 
        Holy Bible, New International Version®, NIV®. Copyright © 1973, 1978, 
        1984, 2011 by Biblica, Inc.™ Used by permission of Zondervan. All rights 
        reserved worldwide. www.zondervan.com  The “NIV” and “New International 
        Version” are trademarks registered in the United States Patent and Trademark 
        Office by Biblica, Inc.™</string>
    <string name="credits_votd">Scriptures for the Verse of the Day card are 
        taken from VerseOfTheDay.com with permission.</string>
    <string name="credits_esv">Initial Scripture quotations are from The Holy 
        Bible, English Standard Version® (ESV®), copyright © 2001 by Crossway, 
        a publishing ministry of Good News Publishers. Used by permission. All 
        rights reserved.</string>
    <string name="android_holo_colors">Theme created with the help of 
        android-holo-colors.com, and all resources generated and used are 
        licensed under a Creative Commons Attribution 3.0 Unported License. 
        - See more at: http://android-holo-colors.com/#sthash.AR8FSKdC.dpuf</string>
    <string name="android_actionbar_style">Actionbar theme created with the help of
        Android ActionBar Style Generator, and all resources generated and used 
        are licensed under a Creative Commons Attribution 3.0 Unported License. 
        http://jgilfelt.github.io/android-actionbarstylegenerator/</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_widget_configuration">WidgetConfiguration</string>
    <string name="share_message">Are you looking for a new way to memorize Scripture? You should try this new app called Scripture Memory Notifications! You can add your favorite verses or try to memorize the Verse of the Day. You can even challenge yourself with just the first letter of each word, and much more, all from your phone\'s notification drawer!\n\nLearn more at https://play.google.com/store/apps/details?id=com.caseybrooks.scripturememory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
