<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="?attr/color_background"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:orientation="vertical" >
<RelativeLayout
     android:id="@+id/MainLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" > 
     
     <TextView
         android:id="@+id/about_app_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:gravity="center"
         android:text="@string/app_name"
         android:textSize="@dimen/title_text_size"
         android:fontFamily="sans-serif-light" />
     
     <ImageView
         android:id="@+id/about_app_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/about_app_title"
         android:src="@drawable/ic_launcher" />
     
     <TextView
         android:id="@+id/about_developer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:gravity="center"
         android:layout_below="@id/about_app_icon"
         android:text="@string/developer"
         android:fontFamily="sans-serif-light" />
         
     <TextView
         android:id="@+id/about_votd"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/about_developer"
         android:fontFamily="sans-serif-light"
         android:text="@string/credits_votd" />
     
    <TextView
        android:id="@+id/about_niv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/about_votd"
        android:fontFamily="sans-serif-light"
        android:text="@string/credits_niv" />
    
	<TextView
    	android:id="@+id/about_esv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/about_niv"
        android:fontFamily="sans-serif-light"
        android:text="@string/credits_esv" />
</RelativeLayout>
</ScrollView>
